fixed junit tests #5